--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,14 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+## SYNRGY Final Project - Team C
 
-## What is Nextra?
+This website will help you to develop our final project. We will use the following technologies:
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+### Frontend
 
-## Documentation
+- React.js
+- Next.js
+- Tailwind
+- Axios
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+### Backend
+
+- Express
