--- a/pages/components/badge.mdx
+++ b/pages/components/badge.mdx
@@ -1,6 +1,6 @@
 import Badge from "@components/built-in/Badge";
 
-## Badge
+## Props
 
 | Props    | Type              | Required | Default   |
 | -------- | ----------------- | -------- | --------- |
@@ -26,7 +26,7 @@ Methods:
 
 ## Example
 
-```tsx filename=Example
+```tsx filename="Badge"
 <Badge variant="primary">Example Badge</Badge>
 <Badge variant="success" outline>Example Badge</Badge>
 <Badge variant="warning">Example</Badge>
@@ -34,6 +34,7 @@ Methods:
 ```
 
 {" "}
+
 <Badge variant="primary">Example</Badge>
 <Badge variant="success" outline>
   Example
