--- a/pages/components/loadingscreen.mdx
+++ b/pages/components/loadingscreen.mdx
@@ -1,6 +1,6 @@
 import LoadingScreen from "@components/LoadingScreen";
 
-## Badge
+## Props
 
 | Props    | Type    | Required | Default |
 | -------- | ------- | -------- | ------- |
@@ -9,7 +9,7 @@ import LoadingScreen from "@components/LoadingScreen";
 
 ## Example
 
-```tsx filename=Example
+```tsx filename="Loading Screen"
 <LoadingScreen/>
 <LoadingScreen redirect/>
 <LoadingScreen redirect page="profile"/>
