--- a/pages/contribute.mdx
+++ b/pages/contribute.mdx
@@ -2,7 +2,7 @@
 
 1. Clone repository
 
-```bash filename="Pattern"
+```bash
 git clone -b <branchname>  <remote-repo-url>
 ```
 
@@ -14,9 +14,9 @@ git clone -b development git@github.com:SYNRGY-FP-C/docs.git
 git clone -b development https://github.com/SYNRGY-FP-C/docs.git
 ```
 
-2. Checkout branch feature/namafitur
+2. Checkout branch feature/namafitur-step
 
-```bash filename="Pattern"
+```bash
 git checkout -b feature/namafitur-step
 ```
 
@@ -26,7 +26,7 @@ git checkout -b feature/login-slicing
 
 3. Pull dari branch development
 
-```bash filename="Pattern"
+```bash
 git pull origin <parrent-branch>
 ```
 
@@ -34,25 +34,23 @@ git pull origin <parrent-branch>
 git pull origin development
 ```
 
-4. Add, Commit dan Push ke branch feature/namafitur
+4. Add, Commit dan Push ke branch feature/namafitur-step
 
-```bash filename="Pattern"
+```bash
 git add .
 ```
 
-```bash filename="Pattern"
+```bash
 git commit -m "commit message"
 ```
 
+```bash
+git push origin feature/namafitur-step
+```
+
 ```bash filename="Example"
+git add .
 git commit -m "slicing login page"
-```
-
-```bash filename="Pattern"
-git push origin feature/namafitur
-```
-
-```bash filename="Example"
 git push origin feature/login-slicing
 ```
 
