--- a/pages/contribute.mdx
+++ b/pages/contribute.mdx
@@ -1,6 +1,6 @@
 ## Contribute
 
-1. Clone repository
+### 1. Clone repository
 
 ```bash
 git clone -b <branchname> <remote-repo-url>
@@ -14,7 +14,7 @@ git clone -b development git@github.com:SYNRGY-FP-C/docs.git
 git clone -b development https://github.com/SYNRGY-FP-C/docs.git
 ```
 
-2. Checkout branch feature/namafitur-step
+### 2. Checkout branch feature/namafitur-step
 
 ```bash
 git checkout -b feature/namafitur-step
@@ -24,7 +24,7 @@ git checkout -b feature/namafitur-step
 git checkout -b feature/login-slicing
 ```
 
-3. Pull dari branch development
+### 3. Pull dari branch development
 
 ```bash
 git pull origin <parrent-branch>
@@ -34,7 +34,7 @@ git pull origin <parrent-branch>
 git pull origin development
 ```
 
-4. Add, Commit dan Push ke branch feature/namafitur-step
+### 4. Add, Commit dan Push ke branch feature/namafitur-step
 
 ```bash
 git add .
@@ -54,4 +54,4 @@ git commit -m "slicing login page"
 git push origin feature/login-slicing
 ```
 
-5. Pull Request ke branch development di github
+### 5. Pull Request ke branch development di github
