--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,14 +1,17 @@
 ## SYNRGY Final Project - Team C
 
-This website will help you to develop our final project. We will use the following technologies:
+This website will help you to develop This website will help you to develop our final project. We will use the following technologies:
+our final project. We will use the following technologies:
 
 ### Frontend
 
 - React.js
 - Next.js
 - Tailwind
-- Axios
 
 ### Backend
 
 - Express
+- PostgreSQL
+- Sequelize
+- JWT
