--- a/pages/backend/utils/jwt.mdx
+++ b/pages/backend/utils/jwt.mdx
@@ -1,6 +1,6 @@
 ## JWT
 
-JWT adalah
+JWT adalah singkatan dari JSON Web Token. JWT adalah sebuah token yang digunakan untuk mengotentikasi sebuah user.
 
 ### Example
 
