--- a/pages/contribute.mdx
+++ b/pages/contribute.mdx
@@ -26,9 +26,15 @@ git checkout -b feature/namafitur-step
 git checkout -b feature/login-slicing
 ```
 
-### 3. Ngoding
+### 3. Setup .env
 
-### 4. Pull dari branch development
+See [Environtment Variables](https://github.com/SYNRGY-FP-C/dotenv)
+
+Copy and paste the value from `.env` file.
+
+### 4. Ngoding
+
+### 5. Pull dari branch development
 
 ```bash
 git pull origin <parrent-branch>
@@ -38,7 +44,7 @@ git pull origin <parrent-branch>
 git pull origin development
 ```
 
-### 5. Add, Commit dan Push ke branch feature/namafitur-step
+### 6. Add, Commit dan Push ke branch feature/namafitur-step
 
 ```bash
 git add .
@@ -58,8 +64,8 @@ git commit -m "slicing login page"
 git push origin feature/login-slicing
 ```
 
-### 6. Pull Request ke branch development di github
+### 7. Pull Request ke branch development di github
 
-### 7. Tunggu review dari team
+### 8. Tunggu review dari team
 
 Kembali ke branch `development` ketika menambah fitur baru dan lakukan step 2-7
