docs: update req ver

--- a/pages/apis/verification/request.mdx
+++ b/pages/apis/verification/request.mdx
@@ -17,8 +17,8 @@ User who already verified their account will get error response.
 
 ```json
 {
-  "email": "string",
-  "type": "string|enum"
+  "email?": "string",
+  "phone_number?": "string"
 }
 ```
 
