--- a/pages/pages/index.mdx
+++ b/pages/pages/index.mdx
@@ -4,7 +4,7 @@
 
 This page is used to display all rooms and categories.
 
-- Title => `Brand Name`
+- Title => `KostHub - Cari Kost`
 - URL => `/`
 - Path => `src/pages/index.jsx`
 
@@ -15,11 +15,21 @@ This page is used to display all rooms and categories.
 ### APIs / Services / Contexts
 
 - Get all rooms => `GET /api/rooms` using `roomService`
-- Get all rooms by category => `GET /api/rooms/categories` using `roomService`
+- Get all rooms by category => `GET /api/rooms/categories` using `roomService`?
+- Get all testimonies => `GET /api/testimonies` using `testimonyService`?
+
+### Forms
+
+- SearchBar
+  - `search`
 
 ### Page Elements / Components / Layouts
 
 - Navbar (using DefaultLayout)
 - Hero
-- Featured
+- SearchBar
+- Featured (Hits)
+- Featured (Baru)
+- Featured (Populer)
+- Testimonial
 - Footer (using DefaultLayout)
