--- a/pages/pages/my/history.mdx
+++ b/pages/pages/my/history.mdx
@@ -1,10 +1,10 @@
-## My History Transactions Page
+## Riwayat Transaksi Page
 
 ### Description
 
 This page is used to show user (tenant / renter) history transactions (rental, payment, etc) in a table.
 
-- Title => `My History`
+- Title => `Riwayat Transaksi`
 - URL => `/my/history`
 - Path => `src/pages/my/history.jsx`
 
