--- a/pages/pages/my/notifications.mdx
+++ b/pages/pages/my/notifications.mdx
@@ -1,10 +1,10 @@
-## My Notification Page
+## Notifikasi Page
 
 ### Description
 
 This page is used to display user (tenant / renter) notification.
 
-- Title => `My Notification`
+- Title => `Notifikasi`
 - URL => `/my/notifications`
 - Path => `src/pages/my/notifications.jsx`
 
