--- a/pages/pages/my/settings.mdx
+++ b/pages/pages/my/settings.mdx
@@ -1,10 +1,10 @@
-## My Settings Page
+## Pengaturan Page
 
 ### Description
 
 It contains a button to logout.
 
-- Title => `My Settings`
+- Title => `Pengaturan`
 - URL => `/my/settings`
 - Path => `src/pages/my/settings.jsx`
 
