--- a/pages/pages/my/wishlist.mdx
+++ b/pages/pages/my/wishlist.mdx
@@ -1,10 +1,10 @@
-## My Wishlist Page
+## Wishlist Page
 
 ### Description
 
 This page is used to
 
-- Title => `My Wishlist`
+- Title => `Wishlist`
 - URL => `/my/wishlist`
 - Path => `src/pages/my/wishlist.jsx`
 
