--- a/pages/contract/auth/register.mdx
+++ b/pages/contract/auth/register.mdx
@@ -12,22 +12,27 @@ import Badge from "@components/built-in/Badge";
 
 **Body :**
 
-```json
-{
-  "email": "string",
-  "phone_number": "string",
-  "password": "string"
-}
-```
-
-or
+Pencari
 
 ```json
 {
   "email": "string",
   "phone_number": "string",
   "password": "string",
-  "confirm_password": "string"
+  "confirm_password": "string",
+  "type": 1
+}
+```
+
+Penyedia
+
+```json
+{
+  "email": "string",
+  "phone_number": "string",
+  "password": "string",
+  "confirm_password": "string",
+  "type": 2
 }
 ```
 
