docs: update current user

--- a/pages/contract/auth/currentuser.mdx
+++ b/pages/contract/auth/currentuser.mdx
@@ -23,6 +23,7 @@ import Badge from "@components/built-in/Badge";
   "occupation": "string",
   "email": "string, email",
   "phone_number": "string",
-  "role": "string, enum"
+  "role": "string, enum",
+  "isVerified": "boolean"
 }
 ```
