--- a/pages/contract/responses.mdx
+++ b/pages/contract/responses.mdx
@@ -13,9 +13,7 @@ References:
 
 Status: <Badge outline variant="success">success</Badge>
 
-Status: <Badge outline variant="warning">fail</Badge>
-
-Status: <Badge outline variant="danger">error</Badge>
+Status: <Badge outline variant="warning">failed</Badge>
 
 ## Message
 
@@ -23,7 +21,7 @@ Response description
 
 ## Data
 
-Entity from database
+Data / entity from database
 
 ## Errors
 
