--- a/pages/contract/otp/verify.mdx
+++ b/pages/contract/otp/verify.mdx
@@ -1,25 +1,34 @@
 import Badge from "@components/built-in/Badge";
 
-## Request Verification
+## OTP Verification
 
-This endpoint is used to request verification code to user `email` or phone number via `whatsapp`.
 User who already verified their account will get error response.
 
 **Request :**
 
 - Method : <Badge method="POST">POST</Badge>
-- Endpoint : `/api/verify/request`
+- Endpoint : `/v1/verify`
 - Headers :
   - `Content-Type: application/json`
   - `Accept: application/json`
 
 **Body :**
 
+Bisa menerima `email` atau `phone_number` (harus salah satu)
+
 ```json
 {
   "email?": "string",
-  "phone_number?": "string"
+  "phone_number?": "string",
+  "code": "string"
 }
 ```
 
 **Response :** <Badge outline variant="success">200 OK</Badge>
+
+```json
+{
+  "status": "success",
+  "message": "Verification succeed"
+}
+```
