--- a/pages/contract/auth/register/pencari.mdx
+++ b/pages/contract/auth/register/pencari.mdx
@@ -1,11 +1,11 @@
 import Badge from "@components/built-in/Badge";
 
-## User Registration - Penyedia `MVP`
+## User Registration - Pencari `MVP`
 
 **Request :**
 
 - Method : <Badge method="POST">POST</Badge>
-- Endpoint : `/v1/auth/penyedia/register`
+- Endpoint : `/v1/auth/pencari/register`
 - Headers :
   - `Content-Type: application/json`
   - `Accept: application/json`
