docs: fix and update url

--- a/pages/contract/account/currentuser.mdx
+++ b/pages/contract/account/currentuser.mdx
@@ -5,6 +5,7 @@ import Badge from "@components/built-in/Badge";
 **Request :**
 
 - Method : <Badge method="GET">GET</Badge>
+- URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/account/me`
 - Headers :
   - `Authorization: Bearer <accessToken>`
@@ -24,7 +25,7 @@ import Badge from "@components/built-in/Badge";
     "gender": "string, enum",
     "occupation": "string",
     "email": "string, email",
-    "phone_number": "string",
+    "phone": "string",
     "role": "string, enum",
     "isVerified": "boolean",
     "photo": "string, url",
