--- a/pages/contract/otp/request.mdx
+++ b/pages/contract/otp/request.mdx
@@ -8,6 +8,7 @@ User who already verified their account will get error response.
 **Request :**
 
 - Method : <Badge method="POST">POST</Badge>
+- URL : `https://backend-synrgy-fp-c.zekhoi.dev`
 - Endpoint : `/v1/verify/request`
 - Headers :
   - `Content-Type: application/json`
