--- a/pages/contract/account/profile.mdx
+++ b/pages/contract/account/profile.mdx
@@ -5,6 +5,7 @@ import Badge from "@components/built-in/Badge";
 **Request :**
 
 - Method : <Badge method="POST">POST</Badge>
+- URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/account/profile`
 - Headers :
   - `Authorization: Bearer <accessToken>`
