--- a/pages/contract/otp/verify.mdx
+++ b/pages/contract/otp/verify.mdx
@@ -7,6 +7,7 @@ User who already verified their account will get error response.
 **Request :**
 
 - Method : <Badge method="POST">POST</Badge>
+- URL : `https://backend-synrgy-fp-c.zekhoi.dev`
 - Endpoint : `/v1/verify`
 - Headers :
   - `Content-Type: application/json`
