--- a/pages/contract/account/currentuser.mdx
+++ b/pages/contract/account/currentuser.mdx
@@ -27,7 +27,7 @@ import Badge from "@components/built-in/Badge";
     "email": "string, email",
     "phone": "string",
     "role": "string, enum",
-    "isVerified": "boolean",
+    "verified": "boolean",
     "photo": "string, url",
     "verification": {
       "type": "string, enum",
