--- a/pages/contract/otp/request.mdx
+++ b/pages/contract/otp/request.mdx
@@ -16,12 +16,12 @@ User who already verified their account will get error response.
 
 **Body :**
 
-Bisa menerima `email` atau `phone_number` (harus salah satu)
+Bisa menerima `email` atau `phone` (harus salah satu)
 
 ```json
 {
   "email?": "string",
-  "phone_number?": "string"
+  "phone?": "string"
 }
 ```
 
