--- a/pages/contract/kost/updatekost.mdx
+++ b/pages/contract/kost/updatekost.mdx
@@ -1,12 +1,12 @@
 import Badge from "@components/built-in/Badge";
 
-## Add new Kost `MVP`
+## Update Kost `MVP`
 
 **Request :**
 
-- Method : <Badge method="POST">POST</Badge>
+- Method : <Badge method="PUT">PUT</Badge>
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
-- Endpoint : `/v1/kost/addkost` or else
+- Endpoint : `/v1/kost/updatekost` or else
 - Headers :
   - `Content-Type: multipart/form-data`
 
@@ -47,7 +47,7 @@ import Badge from "@components/built-in/Badge";
 }
 ```
 
-**Response :** <Badge outline variant="success">201 Created</Badge>
+**Response :** <Badge outline variant="success">200 OK</Badge>
 
 ```json
 {
