--- a/pages/contract/rooms/contact.mdx
+++ b/pages/contract/rooms/contact.mdx
@@ -5,6 +5,7 @@ import Badge from "@components/built-in/Badge";
 **Request :**
 
 - Method : <Badge method="GET">GET</Badge>
+- URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/rooms/contact/:roomId` or else
 - Headers :
   - `Content-Type: application/json`
