--- a/pages/contract/rooms/addroom.mdx
+++ b/pages/contract/rooms/addroom.mdx
@@ -4,7 +4,7 @@ import Badge from "@components/built-in/Badge";
 
 **Request :**
 
-- Method : <Badge method="GET">GET</Badge>
+- Method : <Badge method="POST">POST</Badge>
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/rooms/addroom` or else
 - Headers :
