docs: fix room detail

--- a/pages/contract/rooms/detail.mdx
+++ b/pages/contract/rooms/detail.mdx
@@ -46,23 +46,12 @@ import Badge from "@components/built-in/Badge";
         "name": "string"
       }
     ],
-    "payment_scheme": [
+    "rules": [
       {
         "id": "number",
         "name": "string"
       }
     ],
-    "addons_facilities": [
-      {
-        "id": "number",
-        "name": "string",
-        "price": "number"
-      }
-    ],
-    "rules": {
-      "id": "number",
-      "name": "string"
-    },
     "another_room": [
       {
         "id": "number",
@@ -84,7 +73,20 @@ import Badge from "@components/built-in/Badge";
       "city": "string",
       "district": "string",
       "note": "string"
-    }
+    },
+    "payment_scheme": [
+      {
+        "id": "number",
+        "name": "string"
+      }
+    ],
+    "addons_facilities": [
+      {
+        "id": "number",
+        "name": "string",
+        "price": "number"
+      }
+    ]
   }
 }
 ```
