--- a/pages/contract/rooms/submission.mdx
+++ b/pages/contract/rooms/submission.mdx
@@ -29,39 +29,6 @@ import Badge from "@components/built-in/Badge";
 ```json
 {
   "status": "string",
-  "message": "string",
-  "data": {
-    "id": "string|number",
-    "name": "string",
-    "description": "string",
-    "images": ["string"],
-    "type": "string|enum",
-    "rating": "string",
-    "address": "string",
-    "superkost": "boolean",
-    "facilities": ["string"],
-    "rules": ["string"],
-    "coordinates": {
-      "long": "string",
-      "lat": "string"
-    },
-    "reviews": [
-      {
-        "id": "string",
-        "name": "string",
-        "image_url": "string",
-        "occupation": "string",
-        "content": "string",
-        "createdAt": "date"
-      }
-    ],
-    "owner": {
-      "id": "string",
-      "name": "string",
-      "phone_number": "string",
-      "survey?": "string",
-      "createdAt": "date"
-    }
-  }
+  "message": "string"
 }
 ```
