--- a/pages/contract/account/verificationaccount.mdx
+++ b/pages/contract/account/verificationaccount.mdx
@@ -17,10 +17,8 @@ import Badge from "@components/built-in/Badge";
 {
   "email": "string",
   "phone": "string",
-  "verification": {
-    "type": "string, enum",
-    "photo": "file"
-  }
+  "type": "string",
+  "photo": "file, png|jpg"
 }
 ```
 
