--- a/pages/contract/rooms/addroom.mdx
+++ b/pages/contract/rooms/addroom.mdx
@@ -8,6 +8,7 @@ import Badge from "@components/built-in/Badge";
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/rooms/addroom` or else
 - Headers :
+  - `Authorization: Bearer <accessToken>`
   - `Content-Type: multipart/form-data`
 
 **Body :**
