--- a/pages/contract/transactions/update.mdx
+++ b/pages/contract/transactions/update.mdx
@@ -8,6 +8,7 @@ import Badge from "@components/built-in/Badge";
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/transactions/owner/:id` or else
 - Headers :
+  - `Authorization: Bearer <accessToken>`
   - `Content-Type: application/json`
   - `Accept: application/json`
 
