--- a/pages/contract/account/verificationaccount.mdx
+++ b/pages/contract/account/verificationaccount.mdx
@@ -8,7 +8,7 @@ import Badge from "@components/built-in/Badge";
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/account/verification`
 - Headers :
-  - `Authorization: Bearer <accessToken>`
+  - `Authorization: Bearer <access_token>`
   - `Content-Type: multipart/form-data`
 
 **Body :**
