--- a/pages/contract/kost/addkost.mdx
+++ b/pages/contract/kost/addkost.mdx
@@ -6,9 +6,9 @@ import Badge from "@components/built-in/Badge";
 
 - Method : <Badge method="POST">POST</Badge>
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
-- Endpoint : `/v1/kost/addkost` or else
+- Endpoint : `/v1/kost/add` or else
 - Headers :
-  - `Authorization: Bearer <accessToken>`
+  - `Authorization: Bearer <access_token>`
   - `Content-Type: multipart/form-data`
 
 **Body :**
