--- a/pages/contract/transactions/owner.mdx
+++ b/pages/contract/transactions/owner.mdx
@@ -8,7 +8,7 @@ import Badge from "@components/built-in/Badge";
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/transactions/owner` or else
 - Headers :
-  - `Authorization: Bearer <accessToken>`
+  - `Authorization: Bearer <access_token>`
   - `Content-Type: application/json`
   - `Accept: application/json`
 
