--- a/pages/contract/auth/password.mdx
+++ b/pages/contract/auth/password.mdx
@@ -8,7 +8,7 @@ import Badge from "@components/built-in/Badge";
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/auth/password`
 - Headers :
-  - `Authorization: Bearer <accessToken>`
+  - `Authorization: Bearer <access_token>`
   - `Content-Type: application/json`
 
 **Body :**
