--- a/pages/contract/kost/updatekost.mdx
+++ b/pages/contract/kost/updatekost.mdx
@@ -9,7 +9,8 @@ import Badge from "@components/built-in/Badge";
 - Endpoint : `/v1/kost/update` or else
 - Headers :
   - `Authorization: Bearer <access_token>`
-  - `Content-Type: multipart/form-data`
+  - `Content-Type: application/json`
+  - `Accept: application/json`
 
 **Body :**
 
@@ -17,8 +18,8 @@ import Badge from "@components/built-in/Badge";
 {
   "id": "number",
   "name": "string",
-  "outdoor_photo": "file, png|jpg|jpeg",
-  "indoor_photo": "file, png|jpg|jpeg",
+  "outdoor_photo": "string, base64",
+  "indoor_photo": "string, base64",
   "type": "string, enum",
   "description": "string",
   "longitude": "string",
