--- a/pages/contract/transactions/update.mdx
+++ b/pages/contract/transactions/update.mdx
@@ -16,7 +16,7 @@ import Badge from "@components/built-in/Badge";
 
 ```json
 {
-  "status": "string,approved|rejected"
+  "status": "string, onproccess|canceled|approved|rejected|ongoing|ended"
 }
 ```
 
