--- a/pages/contract/transactions/getall.mdx
+++ b/pages/contract/transactions/getall.mdx
@@ -22,7 +22,7 @@ import Badge from "@components/built-in/Badge";
     {
       "id": "number",
       "name": "string",
-      "status": "string, onproccess|approved|rejected|ongoing|ended",
+      "status": "string, onproccess|canceled|approved|rejected|ongoing|ended",
       "label": "string",
       "thumbnail": "string",
       "address": "string",
