--- a/pages/contract/auth/password.mdx
+++ b/pages/contract/auth/password.mdx
@@ -4,7 +4,7 @@ import Badge from "@components/built-in/Badge";
 
 **Request :**
 
-- Method : <Badge method="POST">POST</Badge>
+- Method : <Badge method="PUT">PUT</Badge>
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
 - Endpoint : `/v1/auth/password`
 - Headers :
