--- a/pages/contract/auth/login.mdx
+++ b/pages/contract/auth/login.mdx
@@ -42,6 +42,7 @@ import Badge from "@components/built-in/Badge";
       },
       "verified": "boolean"
     }
-  }
+  },
+  "error": "string"
 }
 ```
