--- a/pages/contract/errors.mdx
+++ b/pages/contract/errors.mdx
@@ -16,11 +16,7 @@ Response : <Badge outline variant="danger">422 Unprocessable Entity</Badge>
 {
   "status": "string",
   "message": "string",
-  "errors?": [
-    {
-      "field": "string",
-      "message": "string"
-    }
-  ]
+  "data": "object",
+  "error": "string"
 }
 ```
