--- a/pages/contract/rooms/contact.mdx
+++ b/pages/contract/rooms/contact.mdx
@@ -21,7 +21,7 @@ import Badge from "@components/built-in/Badge";
     "id": "number",
     "name": "string",
     "phone": "string",
-    "createdAt": "date"
+    "created_at": "date"
   }
 }
 ```
