--- a/pages/contract/rooms/detail.mdx
+++ b/pages/contract/rooms/detail.mdx
@@ -26,20 +26,14 @@ import Badge from "@components/built-in/Badge";
     "description": "string",
     "max_person": "number",
     "price": "number",
-    "images": {
-      "kost": [
-        {
-          "id": "number",
-          "url": "string"
-        }
-      ],
-      "room": [
-        {
-          "id": "number",
-          "url": "string"
-        }
-      ]
-    },
+    "long": "string",
+    "lat": "string",
+    "address": "string",
+    "province": "string",
+    "city": "string",
+    "district": "string",
+    "note": "string",
+    "images": ["string"],
     "facilities": [
       {
         "id": "number",
@@ -65,15 +59,6 @@ import Badge from "@components/built-in/Badge";
         "rating": "number"
       }
     ],
-    "location": {
-      "long": "string",
-      "lat": "string",
-      "address": "string",
-      "province": "string",
-      "city": "string",
-      "district": "string",
-      "note": "string"
-    },
     "payment_scheme": [
       {
         "id": "number",
