--- a/pages/contract/rooms/updateroom.mdx
+++ b/pages/contract/rooms/updateroom.mdx
@@ -43,11 +43,13 @@ import Badge from "@components/built-in/Badge";
 }
 ```
 
-**Response :** <Badge outline variant="success">200 Created</Badge>
+**Response :** <Badge outline variant="success">200 OK</Badge>
 
 ```json
 {
   "status": "string",
-  "message": "string"
+  "message": "string",
+  "data": "object",
+  "error": "string"
 }
 ```
