--- a/pages/contract/transactions/submission.mdx
+++ b/pages/contract/transactions/submission.mdx
@@ -30,6 +30,8 @@ import Badge from "@components/built-in/Badge";
 ```json
 {
   "status": "string",
-  "message": "string"
+  "message": "string",
+  "data": "object",
+  "error": "string"
 }
 ```
