--- a/pages/contract/account/profile.mdx
+++ b/pages/contract/account/profile.mdx
@@ -28,6 +28,8 @@ import Badge from "@components/built-in/Badge";
 ```json
 {
   "status": "string",
-  "message": "string"
+  "message": "string",
+  "data": "object",
+  "error": "string"
 }
 ```
