--- a/pages/contract/auth/password.mdx
+++ b/pages/contract/auth/password.mdx
@@ -25,6 +25,8 @@ import Badge from "@components/built-in/Badge";
 ```json
 {
   "status": "string",
-  "message": "string"
+  "message": "string",
+  "data": "object",
+  "error": "string"
 }
 ```
