--- a/pages/contract/auth/register/penyewa.mdx
+++ b/pages/contract/auth/register/penyewa.mdx
@@ -43,6 +43,7 @@ import Badge from "@components/built-in/Badge";
       },
       "verified": "boolean"
     }
-  }
+  },
+  "error": "string"
 }
 ```
