--- a/pages/contract/kost/addkost.mdx
+++ b/pages/contract/kost/addkost.mdx
@@ -47,6 +47,8 @@ import Badge from "@components/built-in/Badge";
 ```json
 {
   "status": "string",
-  "message": "string"
+  "message": "string",
+  "data": "object",
+  "error": "string"
 }
 ```
