--- a/pages/contract/rooms/addroom.mdx
+++ b/pages/contract/rooms/addroom.mdx
@@ -48,6 +48,8 @@ import Badge from "@components/built-in/Badge";
 ```json
 {
   "status": "string",
-  "message": "string"
+  "message": "string",
+  "data": "object",
+  "error": "string"
 }
 ```
