--- a/pages/contract/account/password.mdx
+++ b/pages/contract/account/password.mdx
@@ -1,23 +1,22 @@
 import Badge from "@components/built-in/Badge";
 
-## Update Transaction Status `MVP`
+## Change Password `MVP`
 
 **Request :**
 
 - Method : <Badge method="PUT">PUT</Badge>
 - URL : `https://be-java-binar-fp-staging.up.railway.app`
-- Endpoint : `/v1/transactions/owner` or else
+- Endpoint : `/v1/account/password`
 - Headers :
   - `Authorization: Bearer <access_token>`
   - `Content-Type: application/json`
-  - `Accept: application/json`
 
 **Body :**
 
 ```json
 {
-  "id": "number",
-  "status": "string, approved|rejected"
+  "password": "string",
+  "new_password": "string"
 }
 ```
 
