--- a/pages/contract/transactions/owner.mdx
+++ b/pages/contract/transactions/owner.mdx
@@ -22,6 +22,7 @@ import Badge from "@components/built-in/Badge";
     {
       "id": "number",
       "name": "string, tenant name",
+      "status": "string, onproccess|ongoing",
       "account_created_date": "date",
       "room_name": "string",
       "room_thumbnail": "string",
