--- a/pages/contract/transactions/submission.mdx
+++ b/pages/contract/transactions/submission.mdx
@@ -16,8 +16,8 @@ import Badge from "@components/built-in/Badge";
 
 ```json
 {
-  "kost_id": "string",
-  "user_id": "string",
+  "room_id": "number",
+  "user_id": "number",
   "capacity": "number",
   "start_date": "date",
   "payment_scheme": "string",
