--- a/pages/contract/kost/all.mdx
+++ b/pages/contract/kost/all.mdx
@@ -21,6 +21,7 @@ import Badge from "@components/built-in/Badge";
   "data": [
     {
       "id": "number",
+      "name": "string",
       "image": "string",
       "label": "string",
       "type": "string",
